--- a/GpsPreview/GpsPreview.csproj
+++ b/GpsPreview/GpsPreview.csproj
@@ -95,9 +95,13 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ConsoleWriter.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Maps\MapUtil.cs" />
+    <Compile Include="Maps\VectorTileProto.cs" />
+    <Compile Include="Maps\VectorTiles.cs" />
     <Compile Include="MapTilesDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -136,6 +140,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.7</Version>
+    </PackageReference>
+    <PackageReference Include="protobuf-net">
+      <Version>2.3.17</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
