--- a/GpsPreview/GpsPreview.csproj
+++ b/GpsPreview/GpsPreview.csproj
@@ -114,6 +114,9 @@
     <Content Include="Maps\2017-07-03_poland_warsaw.mbtiles">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Maps\2017-07-03_europe_poland.mbtiles">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Default.rd.xml" />
