Faster map rendering (cached geometry). Initial road names rendering (very buggy). Added rails and trams ("transit" layer). Tile zoom and pan dev options. Switched to custom vector extract from OSM.

--- a/GpsPreview/GpsPreview.csproj
+++ b/GpsPreview/GpsPreview.csproj
@@ -117,6 +117,9 @@
     <Content Include="Maps\2017-07-03_europe_poland.mbtiles">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Maps\tiles.mbtiles">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Default.rd.xml" />
